--- a/src/features/create-post/ui/PublicationStep.module.css
+++ b/src/features/create-post/ui/PublicationStep.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
   min-width: 492px;
 }
 .wrapper :global(.PublicationStep-module__7eatEW__imageSection) {
@@ -14,7 +13,7 @@
   justify-content: space-between;
   padding: 8px 16px;
   flex-shrink: 0;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.04);
+  border-bottom: 1px solid var(--color-dark-100);
 }
 
 .content {
@@ -26,20 +25,20 @@
 
 /* Левая часть - изображение */
 .imageSection {
-  flex: 1;
+  /*flex: 1;*/
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 24px;
-  min-width: 0;
+  /*align-items: center;*/
+  /*justify-content: center;*/
+  /*padding: 24px;*/
+  /*min-width: 0;*/
 }
 
 .imageSlider {
   width: 100%;
   min-width: 492px;
   max-width: 100%;
-  height: 100%;
+  /*height: 100%;*/
 }
 
 /* Правая часть - форма */
@@ -47,8 +46,7 @@
   /*flex: 0 0 400px;*/
   display: flex;
   flex-direction: column;
-  gap: 24px;
-  padding: 24px;
+  padding: 24px 24px 0 24px;
   overflow-y: auto;
   min-width: 492px;
   /*width: 100%;*/
