--- a/src/widgets/addLocation/ui/AddLocation.module.css
+++ b/src/widgets/addLocation/ui/AddLocation.module.css
@@ -2,17 +2,15 @@
   display: flex;
   flex-direction: column;
   background-color: var(--color-dark-300);
-  padding: 24px;
   max-width: 481px;
   width: 100%;
 }
 
-.wrapper :global(.AddLocation-module__Z-1_3W__wrapper) {
-  padding: 0 !important;
-}
+
 
 .inputCustom{
   margin-bottom: 6px;
+  max-height: 144px;
 }
 .containerGeo {
   margin-bottom: 14px;
